css/default.css
body {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    height: 100vh;
}

a {
    text-decoration: none;
    color: black;
}

html,
body,
.container {
    margin: 0px;
    padding: 0px;
}

.header,
.menu-bar,
.content {
    padding-left: 5%;
    padding-right: 5%;
}

.container {
    display: flex;
    flex-flow: column;
    height: 100vh;
    font-size: 16px;
}

.header,
.footer {
    flex: 0 auto;
    background-color: #383444;
    color: ivory;
    padding-top: 16px;
    padding-bottom: 16px;
}

.header {
    flex: 0 1 auto;
    text-align: center;
}

.header-title {
    font-size: 56px;
    font-weight: bold;
}

.header-subtitle {
    font-size: 36px;
    font-weight: 700;
}

.content {
    flex: 1 1 auto;
    background-color: darkgrey;
    padding-top: 16px;
    padding-bottom: 16px;
    display: flex;
    flex-wrap: wrap-reverse;
    gap: 16px;
}

.footer {
    flex: 0 1 auto;
    padding-right: 5%;
    font-size: 12px;
    text-align: right;
}

.text-striketrough {
    text-decoration: line-through;
}

.text-bold {
    font-weight: bold;
}

.text-italic {
    font-style: italic;
}

